[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mithra-flow"
dynamic = ["version"]
description = "Trace nested project function calls from decorated Python functions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "MITHUNMITS" },
]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
examples = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/MITHUNMITS/mithra-flow"
Repository = "https://github.com/MITHUNMITS/mithra-flow"
Issues = "https://github.com/MITHUNMITS/mithra-flow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mithra_flow"]

[tool.hatch.version]
path = "src/mithra_flow/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
