[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mithra-flow"
dynamic = ["version"]
description = "Trace nested project function calls from decorated Python functions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MITHUNMITS" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
examples = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/MITHUNMITS/mithra-flow"
Repository = "https://github.com/MITHUNMITS/mithra-flow"
Issues = "https://github.com/MITHUNMITS/mithra-flow/issues"
Changelog = "https://github.com/MITHUNMITS/mithra-flow/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mithra_flow"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
